@@ -5,10 +5,13 @@ import jakarta.persistence.*;
 
 import lombok.*;
 import com.fasterxml.jackson.annotation.JsonProperty;
+import com.lending.app.model.enums.Role;
 import org.springframework.security.core.GrantedAuthority;
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.UserDetails;
 import java.util.Collection;
 import java.util.Collections;
+import java.util.List;
 import java.time.LocalDateTime;
 
 @Data
@@ -38,6 +41,10 @@ public class User extends BaseEntity implements UserDetails {
     @Column(nullable = false)
     private String email;
 
+    @Enumerated(EnumType.STRING)
+    @Column(nullable = false)
+    private Role role;
+
     @Column(nullable = false)
     private int score;
 
@@ -45,7 +52,7 @@ public class User extends BaseEntity implements UserDetails {
 
     @Override
     public Collection<? extends GrantedAuthority> getAuthorities() {
-        return Collections.emptyList();
+        return List.of(new SimpleGrantedAuthority("ROLE_" + role.name()));
     }
 
     @Override
